--- a/WebsiteDental/Views/Shared/Components/FQAs/Default.cshtml
+++ b/WebsiteDental/Views/Shared/Components/FQAs/Default.cshtml
@@ -1,4 +1,7 @@
 ﻿@model IEnumerable<WebsiteDental.Models.Faq>
+@section style {
+    <link href="~/assets/css/style/style_FQA.css" rel="stylesheet">
+}
 <!-- FAQs Start -->
 <div class="custom-container">
     <div class="health-faq-section">
