--- a/WebsiteDental/Views/Shared/Components/MenuTop/Default.cshtml
+++ b/WebsiteDental/Views/Shared/Components/MenuTop/Default.cshtml
@@ -7,7 +7,7 @@
 }
 
 <!-- Navbar & Hero Start -->
-<div class="container-fluid nav-bar">
+<div style="background-color: white !important" class="container-fluid nav-bar">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light px-0">
             <a href="#" class="navbar-brand">
