--- a/WebsiteDental/wwwroot/assets/css/About.css
+++ b/WebsiteDental/wwwroot/assets/css/About.css
@@ -1,4 +1,4 @@
-﻿
+﻿/*
 :root {
     --primary-color: #0d6efd;
     --secondary-color: #2d6da3;
@@ -148,10 +148,6 @@ body {
     padding: 80px 0;
 }
 
-.navbar {
-    box-shadow: 0 2px 15px rgba(0,0,0,0.1);
-}
-
 footer {
     background-color: var(--dark-blue);
     color: white;
@@ -218,3 +214,4 @@ footer {
     margin-top: 30px;
 }
 
+*/
