--- a/WebsiteDental/Views/Products/Index.cshtml
+++ b/WebsiteDental/Views/Products/Index.cshtml
@@ -32,10 +32,10 @@
         </div>
 
         <div class="vertical-ad">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6zxarCGvXLGtHV8tFrXiROrK3y_r9QzmoNQ&s" alt="Quảng cáo" style="width: 100%; height: 100%; object-fit: cover;">
+            <img src="/assets/img/Discounts/anh11.webp" alt="Quảng cáo" style="width: 100%; height: 100%; object-fit: cover;">
         </div>
         <div class="vertical-ad">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6zxarCGvXLGtHV8tFrXiROrK3y_r9QzmoNQ&s" alt="Quảng cáo" style="width: 100%; height: 100%; object-fit: cover;">
+            <img src="/assets/img/Discounts/anh12.webp" alt="Quảng cáo" style="width: 100%; height: 100%; object-fit: cover;">
         </div>
     </div>
 
